# Pipes

./: .gitignore  Makefile  README.md  flake.nix  pipes.6  pipes.sh.6  pipes_sh.py  pyproject.toml
.bootstrap/: patch_runtime.py  pipes_sh.part00  pipes_sh.part01  pipes_sh.part02  pipes_sh.part03
.github/workflows/: apply-pipes-command.yml  bootstrap-python-rewrite.yml  cleanup-legacy.yml  create-pre-rewrite-tag.yml  cross-distro.yml  nix.yml
ai-context/: ARCHITECTURE.md  CLEANUP_PLAN.md  DECISIONS.md  FORENSIC_ANALYSIS.md  MIGRATION_PLAN.md  NIX_TROUBLESHOOTING.md  README.md  TESTING.md
nix/: package.nix
packaging/arch/: .SRCINFO  PKGBUILD
packaging/fedora/: pipes-sh-python.spec
scripts/: benchmark.py
tests/: test_cli.py  test_colors.py  test_engine.py  test_glyphs.py  test_integration.py  test_terminal.py  test_version.py
